# antidote-1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
aec/: README.txt
bench/: consolidate.py  initcommands.sh
data/: .gitignore  adult_income.data  adult_income.test  compas_fairml_test.data  compas_fairml_train.data  drug_consumption.data  drug_consumption.test  drug_consumption33.data  drug_consumption33.test  example.arff  fetch-mnist.sh  fetch-uci.sh  german20.data  german80.data  iris.rand  mammographic_masses.rand  retinopathy.rand  train_test_split.py  wdbc.rand  wine.rand  winequality.rand  yeast.rand
doc/: .gitignore  abstract.tex  concrete.tex  domain.tex  dropout.tex  dsl.tex  expressivity.tex  intro.tex  paper.tex  preamble.tex  problem.tex
include/: ASTNode.h  AbstractDomain.h  AbstractDomainTemplate.hpp  AbstractSemantics.h  AbstractSemanticsInstantiations.hpp  AbstractSemanticsTemplate.h  ArffParser.h  ArffScanner.h  ArgParse.h  BoxBoundedDisjunctsDomain.h  BoxBoundedDisjunctsDomainDropoutInstantiation.h  BoxBoundedDisjunctsDomainDropoutInstantiationAddition.h  BoxBoundedDisjunctsDomainDropoutInstantiationLabels.h  BoxBoundedDisjunctsDomainTemplate.h  BoxBoundedDisjunctsDomainTemplate.hpp  BoxBoundedDisjunctsDomainTemplateAddition.hpp  BoxBoundedDisjunctsDomainTemplateLabels.hpp  BoxDisjunctsDomain.h  BoxDisjunctsDomainDropoutInstantiation.h  BoxDisjunctsDomainDropoutInstantiationAddition.h  BoxDisjunctsDomainDropoutInstantiationLabels.h  BoxDisjunctsDomainTemplate.hpp  BoxDisjunctsDomainTemplateAddition.hpp  BoxDisjunctsDomainTemplateLabels.hpp  BoxDomain.h  BoxStateDomainDropoutInstantiation.h  BoxStateDomainDropoutInstantiationAddition.h  BoxStateDomainDropoutInstantiationLabels.h  BoxStateDomainTemplate.hpp  BoxStateDomainTemplateAddition.hpp  BoxStateDomainTemplateLabels.hpp  CommonEnums.h  DataSet.h  (+39 more)
(+122 files in other folders)
